--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,9 +17,9 @@
 
 			<nav id="nav">
 				<ul class="links">
-					<li><a href="index.html">Головна</a></li>
-					<li class="active"><a href="generic.html">Про нас</a></li>
-					<li><a href="elements.html">PAGE 03</a></li>
+					<li><a href="main.html">Головна</a></li>
+					<li class="active"><a href="aboutUs.html">Про нас</a></li>
+					<li><a href="info.html">Інформація</a></li>
 				</ul>
 			</nav>
 
@@ -113,10 +113,7 @@
 						</section>
 
 						<section>
-							<h3>ТОВАРИСТВО З ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ "Туризм Консалтинг"</h3>
-							<div>
-								<p style="color: #717981;">ІПН 45157221</p>
-							</div>
+							<h3>ТОВАРИСТВО З <br> ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ <br> "Туризм Консалтинг" <p style="color: #0d6bc9;">ІПН 45157221</p></h3>
 						</section>
 					</section>
 				</footer>
