--- a/main.html
+++ b/main.html
@@ -32,9 +32,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Головна</a></li>
-							<li><a href="generic.html">Про нас</a></li>
-							<li><a href="elements.html">PAGE 03</a></li>
+							<li class="active"><a href="main.html">Головна</a></li>
+							<li><a href="aboutUs.html">Про нас</a></li>
+							<li><a href="info.html">Інформація</a></li>
 						</ul>
 					</nav>
 
@@ -137,6 +137,9 @@
 							<section>
 								<h3>Ел. адреса<br /></h3>
 								<p><a href="#">tourism_consalting@ukr.net</a></p>
+							</section>
+							<section>
+								<h3>ТОВАРИСТВО З <br> ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ <br> "Туризм Консалтинг" <p style="color: #0d6bc9;">ІПН 45157221</p></h3>
 							</section>
 							<!-- <section>
 								<h3>Social</h3>
