--- a/aboutUs.html
+++ b/aboutUs.html
@@ -17,7 +17,7 @@
 
 			<nav id="nav">
 				<ul class="links">
-					<li><a href="main.html">Головна</a></li>
+					<li><a href="index.html">Головна</a></li>
 					<li class="active"><a href="aboutUs.html">Про нас</a></li>
 					<li><a href="info.html">Інформація</a></li>
 				</ul>
