--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="main.html">Головна</a></li>
+							<li><a href="index.html">Головна</a></li>
 							<li><a href="aboutUs.html">Про нас</a></li>
 							<li class="active"><a href="info.html">Інформація</a></li>
 						</ul>
