--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>LTA SERVICE</title>
+		<title>ТУРИЗМ КОНСАЛТИНГ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -113,7 +113,7 @@
 						</section>
 
 						<section>
-							<h3>ТОВАРИСТВО З <br> ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ <br> "Туризм Консалтинг" <p style="color: #0d6bc9;">ІПН 45157221</p></h3>
+							<h3>ТОВАРИСТВО З ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ <br> "Туризм Консалтинг" <p style="color: #0d6bc9;">ІПН 45157221</p></h3>
 						</section>
 					</section>
 				</footer>
@@ -127,7 +127,6 @@
 							</ul>
 						</ul>
 					</div>
-
 			</div>
 
 		<!-- Scripts -->
