--- a/info.html
+++ b/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>LTA SERVICE</title>
+		<title>ТУРИЗМ КОНСАЛТИНГ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,11 +30,17 @@
 				<!-- Main -->
 					<div id="main">
 
+						<ol>
+							<li> <a href="#refundTerms">Умови повернення коштів</a> </li>
+							<li> <a href="#paymentRules">Правила оплати</a> </li>
+							<li> <a href="#deliveryAcrossUkraine">Доставка по Україні</a> </li>
+						</ol>
+
 						<!-- Post -->
 
 						<section>
 							<header>
-								<h2>Умови повернення коштів</h2>
+								<h2 id="refundTerms">Умови повернення коштів</h2>
 								<p>
 									Повернення грошових коштів за придбані тури і екскурсії здійснюється відповідно до умов «Публічної оферти».
 									Турист має право відмовитись від виконання цього Договору до початку туристичної подорожі за умови відшкодування
@@ -126,7 +132,7 @@
 
 						<section>
 							<header>
-								<h2>Правила оплати</h2>
+								<h2 id="paymentRules">Правила оплати</h2>
 
 								<ol>
 									<li>
@@ -152,7 +158,7 @@
 
 						<section>
 							<header>
-								<h2>Доставка по Україні</h2>
+								<h2 id="deliveryAcrossUkraine">Доставка по Україні</h2>
 								<p>
 									Після підтвердження та оплати туру здійснюється видача електронних ваучерів на електронну пошту, друк яких не є
 									обов`язковим.
@@ -231,9 +237,8 @@
 							</section>
 
 							<section>
-								<h3>ТОВАРИСТВО З ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ "Туризм Консалтинг"</h3>
 								<div>
-									<h3>ТОВАРИСТВО З <br> ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ <br> "Туризм Консалтинг" <p style="color: #0d6bc9;">ІПН 45157221</p></h3>
+									<h3>ТОВАРИСТВО З ОБМЕЖЕНОЮ ВІДПОВІДАЛЬНІСТЮ <br> "Туризм Консалтинг" <p style="color: #0d6bc9;">ІПН 45157221</p></h3>
 								</div>
 							</section>
 						</section>
