--- a/info.html
+++ b/info.html
@@ -31,9 +31,12 @@
 					<div id="main">
 
 						<ol>
-							<li> <a href="#refundTerms">Умови повернення коштів</a> </li>
-							<li> <a href="#paymentRules">Правила оплати</a> </li>
-							<li> <a href="#deliveryAcrossUkraine">Доставка по Україні</a> </li>
+							<li> 
+								<a class="scrolly" href="#refundTerms">Умови повернення коштів</a> </li>
+							<li> 
+								<a class="scrolly" href="#paymentRules">Правила оплати</a> </li>
+							<li> 
+								<a class="scrolly" href="#deliveryAcrossUkraine">Доставка по Україні</a> </li>
 						</ol>
 
 						<!-- Post -->
