--- a/info.html
+++ b/info.html
@@ -139,23 +139,28 @@
 
 								<ol>
 									<li>
-										Повна оплата за реквізитами
-										Після підтвердження туру, оплата здійснюється на розрахунковий рахунок компанії.
+										Повна оплата за реквізитами.
+										<ul>
+											<li>Після підтвердження туру, оплата здійснюється на розрахунковий рахунок компанії.</li>
+										</ul>
 									</li>
 									<li>
 										Повна оплата готівкою.
 									</li>
 									<li>
 										Бронювання без передоплати на 48 годин.
+									<ul>
+										<li>
+											Для турів на чартерних рейсах до Туреччини, Єгипту, Греції, Італії якщо до дати заїзду більше 30 днів Ви можете
+											забронювати тур без передоплати, в такому випадку за вами буде збережена вартість і зарезервовані квитки, готель
+											знаходиться в статусі очікування. Протягом 48 годин з моменту бронювання вам необхідно оплатити заявку, після цього
+											готель перейде в стадію бронювання.
+										</li>
+									</ul>
 									</li>
 								</ol>
 
-								<p>
-									Для турів на чартерних рейсах до Туреччини, Єгипту, Греції, Італії якщо до дати заїзду більше 30 днів Ви можете
-									забронювати тур без передоплати, в такому випадку за вами буде збережена вартість і зарезервовані квитки, готель
-									знаходиться в статусі очікування. Протягом 48 годин з моменту бронювання вам необхідно оплатити заявку, після цього
-									готель перейде в стадію бронювання.
-								</p>
+								
 							</header>
 						</section>
 
@@ -166,27 +171,35 @@
 									Після підтвердження та оплати туру здійснюється видача електронних ваучерів на електронну пошту, друк яких не є
 									обов`язковим.
 									При бажанні Туриста ваучери в роздрукованому вигляді можна отримати за допомогою:
-									<ul>
-										<li>Самовивезення з офісу.</li>
-										<li>Доставка у відділення «Нова пошта»</li>
-									</ul>
-									Зазвичай доставка займає 1-3 дні.
-									Вартість доставки розраховується відповідно до тарифів сервісу доставки.
-									При отриманні замовлення при собі необхідно мати паспорт або водійське посвідчення.
 								</p>
-
-								<ul>
+								<ol>
+									<li>
+										Самовивезення з офісу.
+									</li>
+									<li>
+										Доставка у відділення «Нова пошта»
+										<ul>
+											<li>
+												Зазвичай доставка займає 1-3 дні.
+												Вартість доставки розраховується відповідно до тарифів сервісу доставки.
+												При отриманні замовлення при собі необхідно мати паспорт або водійське посвідчення.
+											</li>
+										</ul>
+									</li>
 									<li>
 										Доставка у відділення «Укрпошта»
+										<ul>
+											<li>
+												Доставка товарів триває від 1-го до 4-х днів у межах всієї України.
+												Вартість доставки розраховується відповідно до тарифів сервісу доставки.
+												При отриманні необхідно мати при собі паспорт або водійське посвідчення.
+											</li>
+										</ul>
 									</li>
-								</ul>
+								</ol>
+
 								<p>
-									Доставка товарів триває від 1-го до 4-х днів у межах всієї України.
-									Вартість доставки розраховується відповідно до тарифів сервісу доставки.
-									При отриманні необхідно мати при собі паспорт або водійське посвідчення.
-								</p>
-								<p>
-									При отриманні необхідно мати при собі паспорт або водійське посвідчення.
+									<b>При отриманні необхідно мати при собі паспорт або водійське посвідчення.</b>
 								</p>
 							</header>
 						</section>
