--- a/info.html
+++ b/info.html
@@ -45,7 +45,7 @@
 							<header>
 								<h2 id="refundTerms">Умови повернення коштів</h2>
 								<p>
-									Повернення грошових коштів за придбані тури і екскурсії здійснюється відповідно до умов «Публічної оферти».
+									Повернення грошових коштів за придбані тури і екскурсії здійснюється відповідно до умов «<a style="color: #0d6bc9;" href="./images/ДОГОВІР_ПУБЛІЧНОЇ_ОФЕРТИ_КОНСАЛТИНГ.pdf">Публічної оферти</a>».
 									Турист має право відмовитись від виконання цього Договору до початку туристичної подорожі за умови відшкодування
 									Туроператору фактично понесених ним витрат на створення туристичного
 									продукту і забезпеченню надання його Туристу. Заява про відмову Туриста від туристичних послуг в письмовій формі
@@ -159,8 +159,10 @@
 									</ul>
 									</li>
 								</ol>
-
-								
+									
+								<p>
+									<b><a style="color: #0d6bc9;" href="./images/ДОГОВІР_ПУБЛІЧНОЇ_ОФЕРТИ_КОНСАЛТИНГ.pdf">Договір оферти.</a></b>
+								</p>
 							</header>
 						</section>
 
