--- a/info.html
+++ b/info.html
@@ -45,7 +45,7 @@
 							<header>
 								<h2 id="refundTerms">Умови повернення коштів</h2>
 								<p>
-									Повернення грошових коштів за придбані тури і екскурсії здійснюється відповідно до умов «<a style="color: #0d6bc9;" href="./images/ДОГОВІР_ПУБЛІЧНОЇ_ОФЕРТИ_КОНСАЛТИНГ.pdf">Публічної оферти</a>».
+									Повернення грошових коштів за придбані тури і екскурсії здійснюється відповідно до умов «<a style="color: #0d6bc9;" target="_blank" href="./images/ДОГОВІР_ПУБЛІЧНОЇ_ОФЕРТИ_КОНСАЛТИНГ.pdf">Публічної оферти</a>».
 									Турист має право відмовитись від виконання цього Договору до початку туристичної подорожі за умови відшкодування
 									Туроператору фактично понесених ним витрат на створення туристичного
 									продукту і забезпеченню надання його Туристу. Заява про відмову Туриста від туристичних послуг в письмовій формі
@@ -161,7 +161,7 @@
 								</ol>
 									
 								<p>
-									<b><a style="color: #0d6bc9;" href="./images/ДОГОВІР_ПУБЛІЧНОЇ_ОФЕРТИ_КОНСАЛТИНГ.pdf">Договір оферти.</a></b>
+									<b><a style="color: #0d6bc9;" target="_blank" href="./images/ДОГОВІР_ПУБЛІЧНОЇ_ОФЕРТИ_КОНСАЛТИНГ.pdf">Договір оферти.</a></b>
 								</p>
 							</header>
 						</section>
@@ -240,13 +240,10 @@
 								<p>Україна , 01135, місто Київ<br />
 									вул. Золотоустівська, буд 2/4, офіс 21</p>
 							</section>
+							
 							<section>
 								<h3>Телефон</h3>
 								<p><a href="#">+380509670612</a></p>
-							</section>
-							<section>
-								<h3>Ел. адреса<br /></h3>
-								<p><a href="#">tourism_consalting@ukr.net</a></p>
 							</section>
 
 							<section>
