--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,7 +30,7 @@
 								<header class="major">
 									<h3>Про нас</h3>
 								</header>
-								<p>Ми є провідною туристичною агенцією та службою консьєрж-сервісу, визнаною за нашу безпрецедентну майстерність у розробці
+								<p>Ми є провідною туристичною агенцією, визнаною за нашу безпрецедентну майстерність у розробці
 								різноманітних експедицій, адаптованих до потреб наших клієнтів.
 								Наш значний досвід у галузі дозволив нам пропонувати низку розкішних послуг.
 								Зверніться до нас, і ми:
